--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <div></div>
     <script>
-        location.href = 'http://775b4883.r24.cpolar.top';
+        location.href = 'https://1218ce1c.r3.cpolar.top';
     </script>
 </body>
 
