--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div></div>
     
     <script>
-        location.href = 'http://803730.r18.cpolar.top';
+        location.href = 'http://314aa933.r8.cpolar.top';
     </script>
 </body>
 
